# haskellbook

./: README.md
ch01/: README.md  ch1
ch02/: FunctionWithWhere.hs  ch2.hs
ch03/: ;  ch3.hs  print2.hs  print3broken.hs
ch04/: ch4.hs
ch05/: ch5.hs  typeInference1.hs
ch06/: ch6.hs
ch07/: arith2.hs  ch7.hs  registeredUser.hs
ch08/: ch8.hs
ch09/: ch9.hs
ch10/: ch10.hs  database.hs
ch11/: ch11.hs  cipher.hs
ch12/: ch12.hs
ch13/: ch13.hs
ch13/cipher/: .gitignore  cipher.cabal  stack.yaml
ch13/cipher/src/: Cipher.hs
ch13/hangman/: hangman.cabal
ch13/hangman/src/: Hangman.hs  Main.hs
ch13/hangman/tests/: Tests.hs
ch13/hello/: hello.cabal
ch13/hello/src/: Hello.hs
ch14/: WordNumberTest.hs  ch14.hs
ch14/addition/: Addition.hs  addition.cabal
ch14/morse/: morse.cabal
ch14/morse/src/: Main.hs  Morse.hs
ch15/: ch15.hs
ch15/orphan-instance/: Listy.hs  README
ch16/: ch16.hs
ch17/: ch17.hs
ch18/: ch18.hs
ch19/: README.md
ch2/: test.hs
ch20/: ch20.hs
ch21/: ch21.hs
ch22/: ch22.hs
ch23/: ch23.hs
ch24/: alt.hs  bt.hs  ch24.hs  exercises.hs  fractions.hs  ini.hs  marshalling.hs
ch25/: ch25.hs
ch26/: ch26.hs  hitcounter.hs  morra.hs  scotty.hs
ch27/: ch27.hs  coredump.hs  notes.md  stricttest.hs
ch28/: bench.hs  ch28.hs  vector.hs  vector.ps
ch29/: deadlock.hs  ini.hs
ch29/cipher/: cipher.cabal
ch29/cipher/src/: Cipher.hs
ch3/: print3.hs
ch30/: async.hs  catch.hs  customexception.hs  try.hs  try2.hs
ch31/: TODO
ch31/fingerd/: fingerd.cabal
ch31/fingerd/src/: AddUpdateUser.hs  AddUser.hs  Debug.hs  Main.hs
ch4/: greetIfCool1.hs
ch5/: ch5.hs  curry.py
ch6/: ch6.hs
ch7/: arith4.hs  ch7.hs  matchingTuples.hs
ch8/: ch8.hs
ch9/: ch9.hs  cipher.hs
