name:                addition
version:             0.1.0.0
category:            Text
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      .
  ghc-options:         -Wall -fwarn-tabs
  exposed-modules:     Addition
  build-depends:       base >= 4.7 && < 5
                    ,  hspec
                    ,  QuickCheck
  default-language:    Haskell2010
