name:           morse
version:        0.1.0.0
category:       Text
build-type:     Simple

library
  exposed-modules:  Morse
  hs-source-dirs:   src
  ghc-options:      -Wall -fwarn-tabs
  build-depends:    base >=4.7 && <5
                 ,  containers
                 ,  QuickCheck
  default-language: Haskell2010

executable morse
  main-is: Main.hs
  hs-source-dirs:   src
  ghc-options:      -Wall -fwarn-tabs
  build-depends:    base >=4.7 && <5
                 ,  containers
                 ,  QuickCheck
                 ,  morse
  default-language: Haskell2010

test-suite tests
  type:             exitcode-stdio-1.0
  main-is:          Tests.hs
  hs-source-dirs:   tests
  ghc-options:      -fWall -fno-warn-orphans
  build-depends:    base >=4.7 && <5
                 ,  containers
                 ,  QuickCheck
                 ,  morse
  default-language: Haskell2010
