name:                cipher
version:             0.1.0.0
homepage:            no
author:              alexdotc
maintainer:          alexdotc
build-type:          Simple
cabal-version:       >=1.10

executable cipher
  hs-source-dirs:      src
  main-is:             Cipher.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , QuickCheck
